--- a/force-app/main/default/classes/ProjectData.cls
+++ b/force-app/main/default/classes/ProjectData.cls
@@ -1,20 +1,16 @@
-/*
+public without sharing class ProjectData {
+
+    @AuraEnabled(cacheable=true)
+    public static List<Project__c> getProjectRolesRequired(Id projectId) {
+        System.debug(projectId);
+
+        List<Project__c> projectRolesRequired = [
+            SELECT Name, Start_Date__c, End_Date__c, Hours_Sold__c, Status__c,
                 (
                     SELECT Hours_Covered__c, Hours_Required__c, Role__c 
                     FROM Roles__r
                     ORDER BY Role__c
                 )
-
-*/
-
-public without sharing class ProjectData {
-
-    @AuraEnabled(cacheable=true)
-    public static Project__c getProjectRolesRequired(Id projectId) {
-        System.debug(projectId);
-
-        Project__c projectRolesRequired = [
-            SELECT Name, Start_Date__c, End_Date__c, Hours_Sold__c, Status__c
             FROM Project__c
             WHERE Id = :projectId
         ];
