--- a/force-app/main/default/classes/getUsersByRoleTest.cls
+++ b/force-app/main/default/classes/getUsersByRoleTest.cls
@@ -33,5 +33,32 @@ public class getUsersByRoleTest {
         System.assertEquals(0, result2.size());
         System.assertEquals(0, result3.size());
     }
+    @isTest static void testCorrectRoleUser() {
+        // Test data setup
+        User[] usr0 = TestDataFactory.createAvaiableUser(1, 'Developer');
+        User[] usr1 = TestDataFactory.createAvaiableUser(1, 'Consultant');
+        User[] usr2 = TestDataFactory.createAvaiableUser(1, 'Architect');
+        User[] usr3 = TestDataFactory.createAvaiableUser(1, 'Squad lead');
+        User[] usr4 = TestDataFactory.createAvaiableUser(1, 'Project manager');
+        List<String> ls = new List<String>{'Developer','Consultant','Architect','Squad lead','Project manager'};    
+        // Perform test
+        Test.startTest();        
+        List<User> result = getUsersByRole.getUsers(null, null, ls);
+        Test.stopTest();
+        // Verify 
+        System.assertEquals(5, result.size());
+    }
+    @isTest static void testIncorrectRoleUser() {
+        // Test data setup
+        User[] usr0 = TestDataFactory.createAvaiableUser(1, 'CEO');
+
+        List<String> ls = new List<String>{'Developer','Consultant','Architect','Squad lead','Project manager'};    
+        // Perform test
+        Test.startTest();        
+        List<User> result = getUsersByRole.getUsers(null, null, ls);
+        Test.stopTest();
+        // Verify 
+        System.assertEquals(0, result.size());
+    }
 
 }
