--- a/force-app/main/default/classes/ProjectData.cls
+++ b/force-app/main/default/classes/ProjectData.cls
@@ -22,22 +22,58 @@ public without sharing class ProjectData {
 
 
     @AuraEnabled(cacheable=true)
-    public static List<User> getUsers(Date startDate, Date endDate, List<String> roleList) {
+    public static List<User> getUsersAvailableForProject(Date startDate, Date endDate, List<String> roleList) {
 
-        List<Resource__c> resList = new List<Resource__c>();
-        resList = [SELECT Id, Name, Start_Date__c, End_Date__c 
-                    FROM Resource__c 
-                    WHERE NOT ((Start_Date__c > :endDate) OR (End_Date__c < :startDate))]; //podria usar <= y >= si verifico luego q no se solapen la horas de trabajo en el mismo dia
-        List<Id> notAvaiableUsersIds = new List<Id>();             
-        for (Resource__c res : resList) {
-            notAvaiableUsersIds.add(res.Id);            
+        List<Resource__c> resourcesInProjects = [
+            SELECT Id // , Name, Start_Date__c, End_Date__c 
+            FROM Resource__c 
+            WHERE NOT (
+                ((Start_Date__c <= :startDate) AND (End_Date__c >= :startDate))
+                OR ((Start_Date__c <= :endDate) AND (End_Date__c >= :endDate))
+            )
+        ];
+        System.debug(resourcesInProjects);
+
+        List<Id> usersIdNOTAvailable = new List<Id>();             
+        for (Resource__c res : resourcesInProjects) {
+            usersIdNOTAvailable.add(res.Id);            
         }
-           
-        List<User> avaiableUsers = new List<User>();
-        avaiableUsers = [SELECT Id, Name, UserRole.Name     //, (SELECT Start_Date__c, End_Date__c FROM Resources__r WHERE NOT ((Start_Date__c >= :endDate) OR (End_Date__c <= :startDate)))
-                         FROM User WHERE (UserRole.Name IN :roleList) AND Id NOT IN :notAvaiableUsersIds ORDER BY UserRole.Name];    
-        
-        return avaiableUsers;
+        System.debug(usersIdNOTAvailable);
+
+        List<User> availableUsersForProject = [
+            SELECT Id, Name, UserRole.Name //, (SELECT Start_Date__c, End_Date__c FROM Resources__r WHERE NOT ((Start_Date__c >= :endDate) OR (End_Date__c <= :startDate)))
+            FROM User
+            WHERE (Id NOT IN :usersIdNOTAvailable) AND (UserRole.Name IN :roleList)
+            ORDER BY UserRole.Name
+        ];
+        System.debug(availableUsersForProject);
+
+        return availableUsersForProject;
+    }
+
+
+    @AuraEnabled(cacheable=true)
+    public static List<Resource__c> insertUsersToProject(Id projectId, Date startDate, Date endDate, List<Id> usersId) {
+        List<Resource__c> resources = new List<Resource__c>();
+
+        for (Id userId : usersId) {
+            Resource__c resource = new Resource__c(
+                Project__c = projectId,
+                User__c = userId,
+                Start_Date__c = startDate,
+                Role__c = '',
+                End_Date__c = endDate
+            );
+            resources.add(resource);
+        }
+
+        try {
+            insert(resources);
+        } catch (Exception e) {
+            System.debug(e.getMessage());
+        }
+
+        return resources;
     }
 
 }
